# CBindingKMP

./: LICENSE  README.md  article.html  article.md  index.html  settings.gradle.kts
.github/workflows/: deploy-site.yml
assets/: article-CfY8-1ay.js  main-CpzAseGQ.css  main-DET1iuVd.css
composeApp/: build.gradle.kts
composeApp/src/androidMain/kotlin/com/abyxcz/cbindingkmp/: MainActivity.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/com/abyxcz/cbindingkmp/: App.kt
composeApp/src/webMain/resources/: index.html
docs/: api-reference.md  architecture.md  article.html  contributing.md  developer-guide.md  getting-started.md  index.html  introduction.md  main.js
docs/assets/: index-D7ub8Rwi.css  index-DLcrf_1i.js
examples/: gradle.properties  settings.gradle.kts
examples/composeApp/: build.gradle.kts
examples/composeApp/src/webMain/resources/: index.html
examples/iosApp/Configuration/: Config.xcconfig
examples/iosApp/iosApp.xcodeproj/: project.pbxproj
examples/native/c/: CMakeLists.txt  example_lib.c  example_lib.h
examples/server/: build.gradle.kts
examples/shared/: build.gradle.kts
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
native/c/: CMakeLists.txt  mylib.c  mylib.h
plugin/: build.gradle.kts  settings.gradle.kts
server/: build.gradle.kts
shared/: build.gradle.kts
shared/src/nativeInterop/cinterop/: mylib.def
website/: article.html  index.html  package-lock.json  package.json  style.css  vite.config.js
(+47 files in other folders)
